--- a/01-image-preprocessing/main.ipynb
+++ b/01-image-preprocessing/main.ipynb
@@ -448,6 +448,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b98b21e5-4dfa-49b1-b980-85485c1196dd",
+   "metadata": {},
+   "source": [
+    "<img src=\"Shoes-sRGB.png\" style=\"height: 200px\"> <img src=\"Shoes-AdobeRGB.png\" style=\"height: 200px;\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "13ed928c",
